# PYMGCV

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPARISON_GUIDE.md  CONTRIBUTING.md  Campaign.py  CampaignData.py  EXAMPLES.md  HOW_TO_USE_PYMGCV.md  IMPLEMENTATION_GAP_ANALYSIS.md  MANIFEST.in  MGCV_FEATURE_ANALYSIS.md  MODEL_SUMMARY_COMPARISON.md  PHASE_1_PROGRESS.md  PROGRESS.md  PYMGCV_MGCV_COMPARISON_REPORT.txt  README.md  RMGCV_VS_PYMGCV_COMPARISON.md  ROADMAP_DELIVERY_SUMMARY.md  ROADMAP_DETAILED_TASK_BREAKDOWN.md  ROADMAP_QUICK_REFERENCE.md  TPRS_ANALYSIS_AND_FIXES.md  TPRS_OPTIMIZATION_COMPLETE.md  WHY_PYMGCV.md  campaign_data.csv  comparison_framework.py  copilot-instructions.md  insurance_loss_cost_data.csv  insurance_loss_cost_example.py  loss_cost_model.py  mgcv_output.csv  mkdocs.yml  modeloutput.xlsx  profile_reml_power.py  pymgcv_mgcv_scoring.py  pyproject.toml  scan_income_lambda.py  scoring_report_output.txt  setup.py  test_constraint_compare.py  (+3 more)
.github/agents/: pymgcv-gam-architect.agent.md
.github/workflows/: ci.yml
_archive/: COMPREHENSIVE_FEATURE_AUDIT_SUMMARY.md  EXECUTION_CHECKLIST_PHASE_1.md  EXECUTION_CHECKLIST_PHASE_BY_PHASE.md  EXECUTIVE_SUMMARY_98_PARITY_ROADMAP.md  IMPLEMENTATION_ROADMAP_TO_98_PARITY.md  IMPLEMENTATION_STATUS_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PYMGCV_98_PARITY_ROADMAP_SUMMARY.md  REFINED_PROMPT_TEMPLATE.md  ROADMAP_NAVIGATION_INDEX.md  TPRS_QUICK_REFERENCE.md  _check_edf.py  _check_edf2.py  _check_gamma1.py  _check_gamma12.py  _check_verbose.py  compare_tprs_comparison.py  compare_with_mgcv.R  debug_gradient_compare.py  debug_newton_trace.py  debug_offset.py  debug_parity.py  debug_reml_profile.py  debug_reml_trace.py  debug_weights.py  diag_compare_all.py  diag_penalty.R  diag_penalty2.R  model_summary_demo.py  pytest_output.txt  pytest_output2.txt  test_formula_debug.py  test_poisson_data.csv  test_results.txt  test_results2.txt  test_results3.txt  validate_families.py  validate_pymgcv.py  validation_output.txt  verify_tweedie_fix.py
docs/: contributing.md  index.md
docs/api/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: comparison-with-r.md  gam-modeling.md
examples/: COPY_AND_MODIFY_THIS.py  MY_FIRST_GAM.py  QUICK_START_GUIDE.py  README_COMPARISON.py  SESSION_SUMMARY.md  START_HERE.md  basic_usage.py  comparison_template.py  comparison_with_R.py  comprehensive_family_examples.py  insurance_pricing_demo.py  simple_gam_demo.py
notebooks/: 01_quickstart.ipynb  02_insurance_pricing.ipynb  03_campaign_tweedie.ipynb  04_all_families.ipynb
pymgcv/: __init__.py  config.py
pymgcv/api/: __init__.py  bam.py  gam.py  gam_auto.py  gam_check.py  gamm.py  model_comparison.py  plot.py  predict.py  summary.py
pymgcv/criterions/: aic_ubre.py
pymgcv/diagnostics/: __init__.py  concurvity.py  influence.py  residuals.py  significance_tests.py
pymgcv/distributions/: __init__.py  family_base.py  tweedie.py
pymgcv/linalg/: __init__.py  _native_c.c  cholesky_solver.py  eigen_decomposition.py  native_engine.py  penalized_solver.py  qr_decomposition.py  sparse_utils.py  trace_utils.py
pymgcv/optimizer/: __init__.py  edf.py  gcv.py  jax_acceleration.py  magic_optimizer.py  penalized_likelihood.py  pirls.py  reml_objective.py
pymgcv/penalties/: __init__.py  demmler_reinsch.py  penalty_matrix.py  smoothing_param.py
pymgcv/smooth/: __init__.py  advanced.py  bspline.py  cubic_spline.py  cyclic_spline.py  pspline.py  random_effect.py  tensor_product.py  thin_plate.py  thin_plate_backup.py
pymgcv/utils/: __init__.py  formula_parser.py  model_matrix.py
pymgcv/visualization/: __init__.py  diagnostics_plots.py  smooth_plots.py  surface_plots.py
tests/: __init__.py  test_diagnostics.py  test_families.py  test_gam.py  test_gam_families_phase2a.py  test_integration.py  test_native_engine.py  test_new_features.py  test_phase_3_jax.py  test_phases_1_2.py  test_pirls_integration_phase1.py  test_pirls_stability_phase1.py  test_tensor_products.py  test_thin_plate_mgcv_equivalence.py  test_validation_mgcv.py  test_visualization.py
