[build-system]
requires = ["setuptools>=65", "wheel", "numpy>=1.21"]
build-backend = "setuptools.build_meta"

[project]
name = "pymgcv"
version = "0.1.0"
description = "Production-grade GAM package with numerical equivalence to R's mgcv (Simon Wood)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Surya", email = "surya@example.com"}
]
requires-python = ">=3.11"
keywords = ["GAM", "generalized-additive-models", "statistics", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Statistics",
]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
]

[project.optional-dependencies]
gpu = [
    "jax>=0.3.0",
    "jaxlib>=0.3.0",
]
viz = [
    "matplotlib>=3.4",
    "plotly>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "pylint>=2.0",
    "mypy>=1.0",
    "ipython>=8.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Repository = "https://github.com/surya/pymgcv"
Documentation = "https://pymgcv.readthedocs.io"
Issues = "https://github.com/surya/pymgcv/issues"

[tool.setuptools.packages.find]
include = ["pymgcv*"]

[tool.setuptools.package-data]
pymgcv = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pymgcv --cov-report=term-missing --cov-report=html"
