# ──────────────────────────────────────────────────────────────────────
# pymgcv — Production-grade GAM package (PEP 517 / 518 compliant)
# ──────────────────────────────────────────────────────────────────────

[build-system]
requires = ["setuptools>=68", "wheel>=0.41", "numpy>=1.21"]
build-backend = "setuptools.build_meta"

# ── Project metadata ─────────────────────────────────────────────────

[project]
name = "pymgcv"
version = "0.1.0"
description = "Production-grade Generalized Additive Models with numerical equivalence to R's mgcv"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Surya", email = "rekapallisurya@gmail.com"},
]
maintainers = [
    {name = "Surya", email = "rekapallisurya@gmail.com"},
]
requires-python = ">=3.11"
keywords = [
    "GAM",
    "generalized-additive-models",
    "statistics",
    "machine-learning",
    "splines",
    "regression",
    "mgcv",
    "smoothing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
]

# ── Optional dependency groups ───────────────────────────────────────

[project.optional-dependencies]
gpu = [
    "jax>=0.3.0",
    "jaxlib>=0.3.0",
]
viz = [
    "matplotlib>=3.4",
    "plotly>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.4.0",
    "isort>=5.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "ipython>=8.0",
    "build>=1.0",
    "twine>=5.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]
all = [
    "pymgcv[gpu,viz,docs,dev]",
]

# ── URLs ─────────────────────────────────────────────────────────────

[project.urls]
Homepage = "https://github.com/surya/pymgcv"
Documentation = "https://pymgcv.readthedocs.io"
Repository = "https://github.com/surya/pymgcv"
Issues = "https://github.com/surya/pymgcv/issues"
Changelog = "https://github.com/surya/pymgcv/blob/main/CHANGELOG.md"

# ── Setuptools configuration ────────────────────────────────────────

[tool.setuptools.packages.find]
include = ["pymgcv*"]
exclude = ["tests*", "examples*", "docs*", "_archive*"]

[tool.setuptools.package-data]
pymgcv = ["py.typed", "linalg/_native_c.c"]

# ── Tool configuration ──────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
extend-exclude = '''
/(
    _archive
    | __pycache__
    | \.venv
    | build
    | dist
    | htmlcov
    | \.eggs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "_archive",
    "build",
    "dist",
    "htmlcov",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "E722",   # bare except (existing code pattern)
    "W291",   # trailing whitespace (handled by black)
    "W293",   # blank line with whitespace (handled by black)
    "B007",   # unused loop control variable
    "B028",   # no explicit stacklevel in warnings
    "B904",   # raise without from inside except
    "B905",   # zip without strict= (perf)
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "N814",   # camelcase imported as constant
    "F401",   # unused import (may be re-export)
    "F541",   # f-string missing placeholders
    "F821",   # undefined name (false positive in conditional imports)
    "F841",   # unused variable (common in numerical code)
    "E741",   # ambiguous variable name
    "UP015",  # unnecessary open mode
    "SIM103", # needless bool
    "SIM105", # suppressible exception
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["pymgcv"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["pymgcv"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU/JAX",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["pymgcv"]
omit = [
    "pymgcv/linalg/_native_c.c",
    "pymgcv/visualization/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
show_missing = true
